--- a/package.json
+++ b/package.json
@@ -9,18 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.1.3",
+    "mini-svg-data-uri": "^1.4.4",
+    "next": "^14.3.0-canary.9",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.1"
+    "simplex-noise": "^4.0.1",
+    "tailwind-merge": "^2.2.2"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.1"
+    "typescript": "^5"
   }
 }
